--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -514,7 +514,7 @@ textarea{
     line-height: 110% ;
   }
   .gap_178 {
-    gap: 70px;
+    gap: 50px;
   }
   .icon_scrool {
     width: 7.4%;
@@ -556,7 +556,7 @@ textarea{
 }
 @media (min-width: 768px) {
   .gap_178 {
-    gap: 30px;
+    gap: 50px;
   }
   .logo_w_180 {
     width: 81px !important;
@@ -596,7 +596,7 @@ textarea{
 }
 .header_bg {
   position: absolute;
-    top: -75px;
+    top: -55px;
     max-width: 340px;
     height: 642px;
 }
@@ -608,9 +608,7 @@ textarea{
     border-bottom: none;
     border-right: none;
   }
-  .font_16 {
-    font-size: 16px;
-  }
+ 
   .scroll_down {
     width: 10%;
   }
@@ -644,11 +642,14 @@ textarea{
   width: 13.3% !important;
 }
 .fs_16 {
-  font-size: 16px !important;
+  font-size: 12px !important;
 }
 .footer_img{
   max-width: 255px;
   height: 425px;
+}
+.gap_178 {
+  gap: 105px;
 }
 }
 @media (min-width: 1024px) {
@@ -677,13 +678,16 @@ textarea{
 }
 .headers_bg {
   width: 100%;
-  max-width: 498px;
+  max-width: 470px;
 }
 .fs_16 {
   font-size: 11px !important;
 }
 .icon_scrool {
   width: 13.5%;
+}
+.gap_178 {
+  gap: 140px;
 }
 }
 @media (min-width: 1200px) {
