--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -450,6 +450,12 @@ p {
 .text_news{
   font-size: 53px;
 }
+.slider_color{
+  color: #4c4c4c !important;
+  font-size: 16px;
+  font-weight: 400
+  ;
+}
 @media (min-width:576px) { 
 .button_bio{
   padding: 12px 88.26px;
