--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -22,6 +22,9 @@
     position: relative;
     z-index: 70;
   }
+  .letter_0_3 {
+    letter-spacing: -0.03em;
+}
   .font_roboto{
     font-family: "Roboto";
   }
@@ -103,7 +106,8 @@
     border-bottom-right-radius: 0px;
 }
 .img_wdth_section_real{
-    width: 375px;
+  width: 100%;
+    max-width: 375px;
     height: 571px;
 }
 
@@ -129,10 +133,10 @@
 }
 
 /**************** Slider **********************/ 
-.hammer_img{
-  width:215px;
-  height: 495px;
- }
+.hammer_img {
+  width: 160px;
+  height: 350px;
+}
 .hammer_pos_absoulute{
   display: contents;
 }
@@ -186,24 +190,24 @@ box-shadow:  0px 0px 15px #d85a4d;
 }
 .margin_icon{
   margin-top: 3rem;
-  margin-bottom: 600px;
+  margin-bottom: 541px;
 }
-.img_milad{
-  width: 375px;
-  height: 592px;
+.img_milad {
+  width: 335px;
+  height: 500px;
   position: absolute;
   right: 0;
-  top:50.3%;
+  top: 56%;
 }
 
 
 /**************** Cherry **********************/ 
-.img_cherry{
-  width:375px;
-  height: 589px;
+.img_cherry {
+  width: 335px;
+  height: 550px;
   right: 0;
   position: absolute;
-  top: 48.6%;
+  top: 52%;
 }
 .letter_cherry_space{
   letter-spacing: -0.8px;
@@ -310,34 +314,55 @@ p {
   width: 48px;
   height: 48px;
 }
-.my_slider_card{
-  width: 280px;
-  height: 469px;
-  background: transparent;
-  padding: 30px;
-  border-radius: 0px 0px 48px 0px;
-  transition: all 300ms linear;
+.news_heading{
+  font-size: 22px;
 }
-.my_card:hover .my_slider_card{
-  background: transparent;
+.opacity_70{
+  opacity: 0.70;
 }
-.my_card {
-  width: 350px;
-  height: 469px;
+.card_text_color{
+  color: black !important;
+}
+.main_card {
+  max-width: 375px;
+  height: 380px !important;
+  width: 100%;
+  padding: 24px;
   background: #ffffff;
   border: 4px solid #000000;
   border-radius: 0px 0px 48px 0px;
+  transition: all 200ms linear;
   cursor: pointer;
-  transition: all 300ms linear;
-  padding: 10px;
-  position: relative;
-  z-index: 3 !important;
 }
-.my_card:hover{
-  border: transparent;
-  background: transparent;
-  transform: rotate(3.3deg);
+.news_card_img {
+  width: 100%;
+  opacity: 0;
   position: absolute;
+  top: 0%;
+  left: 0%;
+  transition: all 400ms linear;
+  border-radius: 0px 0px 48px 0px;
+}
+.content_height {
+  height: 390px !important;
+}
+.news_card:hover .main_card {
+  transform: rotate(3.3deg);
+
+  background: #000;
+}
+.news_card:hover .card_text_color {
+  color: white !important;
+}
+.news_card:hover .news_card_img {
+  opacity: 1;
+  top: -19%;
+  left: -7%;
+  transform: rotateZ(-8deg);
+}
+.news_card_scroll{
+  height: 160px;
+  overflow-y: scroll;
 }
 .news-img{
   width: 70%;
@@ -351,18 +376,13 @@ p {
   z-index: -10;
   transition: all 300ms linear;
 }
-.my_card:hover .news-img{
-  display: block;
-}
+
 .row_padding {
   padding-top: 80px;
   padding-bottom: 80px;
 }
 .row_border{
   border-radius:0px 0px 50px 0px!important;
-}
-.my_card:hover .text_black{
-  color: white;
 }
 .text_black{
   transition: all 300ms linear;
@@ -442,6 +462,12 @@ p {
 .new_news_card_content::-webkit-scrollbar-track{
   border-radius: 10px;
 }
+.new_news_card_content_first::-webkit-scrollbar-track{
+  border-radius: 10px;
+}
+.news_card_scroll::-webkit-scrollbar-track{
+  border-radius: 10px;
+}
 .li_width{
   width:57%;
 }
@@ -451,10 +477,23 @@ p {
 .slider_color{
   color: #4c4c4c !important;
   font-size: 16px;
-  font-weight: 400
-  ;
+  font-weight: 400;
 }
-@media (min-width:576px) { 
+.news_header_logo{
+  width: 48px;
+  height: 48px;
+}
+@media (min-width:576px) {
+  .news_heading {
+    font-size: 18px;
+}
+  .content_height {
+    height: 370px !important;
+  } 
+  .main_card {
+    width: 95%;
+    height: 370px !important;
+  }
 .button_bio{
   padding: 12px 88.26px;
 }
@@ -471,22 +510,15 @@ p {
   }
 .new_news_card_content {
   background-color: transparent !important;
-  height: 200px;
+  height: 191px;
   overflow-y: scroll;
 }
-  .my_card:hover .my_slider_card{
-    background: black;
-  }
-  .my_slider_card{
-    width: 210px;
-    padding: 10px 0px 25px 10px;
-  }
       .img_wdth_section_real{
-        width: 384px;
+        max-width: 384px;
         height: 584px;
     }
     .img_bussiness{
-      transform: translateX(4%);
+      transform: translateX(3.6%);
         width: 320px;
         height: 521px;
     }
@@ -525,12 +557,23 @@ p {
   .img_construction {
     width: 384px;
     height: 529px;
+    transform: translateY(4.5%) !important;
 }
 .icon_scrool{
   width: 7%;
 }
 }
 @media (min-width:768px) {
+  .content_height {
+    height: 470px !important;
+  } 
+  .main_card {
+    width: 94%;
+    height: 470px !important;
+}
+.news_heading {
+  font-size: 28px;
+}
   .letter_cherry_space {
     letter-spacing: -1.4px;
 }
@@ -547,10 +590,6 @@ p {
   }
   .news-img{
     width: 90%;
-  }
-  .my_slider_card{
-    width: 326px;
-    padding: 10px 0px 25px 10px;
   }
   .pt_150{
     padding-top: 20px;
@@ -572,10 +611,6 @@ p {
     padding-top: 100px !important;
     padding-bottom: 100px;
   }
-  .header_logo {
-    width: 180px;
-    height: 180px;
-}
   .padding_top_200{
     margin-top: 85px !important;
 }
@@ -610,7 +645,7 @@ p {
   .hammer_pos_absoulute{
     display: block;
     position: absolute;
-    top: 19%;
+    top: 22%;
     left: 20%;
   }
   .hammer_img {
@@ -678,13 +713,9 @@ p {
   width: 160px;
 }
   .new_news_card_content_first{
-    height: 200px;
+    height: 191px;
     overflow-y: scroll;
   }
-  .my_slider_card {
-    width: 274px;
-    padding: 10px 10px 35px 10px;
-}
   .col_border_right_bottom{
     border-bottom-right-radius: 231px;
 }
@@ -699,7 +730,7 @@ p {
     font-size: 16px;
   } 
   .img_wdth_section_real {
-    width: 496px;
+    max-width: 496px;
     height: 711px;
 }
   .img_header {
@@ -728,7 +759,7 @@ p {
   }
   .margin_icon{
     margin-top: 40px;
-    margin-bottom: 194px;
+    margin-bottom: 193px;
   }
   .img_milad {
     width: 593px;
@@ -737,13 +768,6 @@ p {
 }
 .height_section {
   min-height: 925px;
-}
-.img_cherry {
-  width: 597px;
-  height: 938px;
-  right: 39% !important;
-  position: absolute;
-  top: 3%;
 }
     .grey-hr {
         width: 81%;
@@ -786,6 +810,10 @@ p {
     }
 }
 @media (min-width:1024px) {
+  .news_header_logo{
+    width: 115px;
+    height: 115px;
+  }
   .col_height{
     height: 150px;
   }
@@ -828,7 +856,7 @@ p {
     transition: all 300ms linear;
   }
   .img_wdth_section_real {
-    width: 512px;
+    max-width: 512px;
     height: 734px;
 }
 .img_bussiness {
@@ -855,13 +883,6 @@ p {
     margin-top: 40px;
     margin-bottom: 90px;
 }
-  .img_cherry {
-    width: 500px;
-    height: 785px;
-    top: -6%;
-    right: 45% !important;
-    position: absolute;
-}
 .height_section {
   min-height: 742px;
 }
@@ -881,16 +902,14 @@ p {
         --fs_xsm:16px;
         --fs_xxsm:13px;
     }
- 
-
 }
 @media (min-width:1200px) {
   .new_news_card_content_first{
-    height: 150px;
+    height: 145px;
     overflow-y: scroll;
   }
   .new_news_card_content {
-    height: 150px !important;
+    height: 145px !important;
     overflow-y: scroll;
   }
   .slide-content{
@@ -900,10 +919,6 @@ p {
     width: 362px;
     height: 469px;
     padding: 16px 15px 20px 15px;
-}
-  .my_slider_card {
-    width: 326px;
-    padding: 10px 10px 35px 10px;
 }
   .padding_top_200 {
     margin-top: 180px !important;
@@ -935,7 +950,7 @@ p {
     margin-right: auto;
   }
   .img_wdth_section_real {
-    width: 600px;
+    max-width: 600px;
     height: 860px;
 }
 .img_bussiness {
@@ -959,14 +974,6 @@ p {
     .padding_top_150{
         padding-top: 90px;
     }
-  .img_cherry {
-    width: 597px;
-    height: 938px;
-    object-fit: cover;
-    right: 44% !important;
-    position: absolute;
-    top: -16%;
-}
 .section_margin_left {
   margin-left: 150px;
 }
@@ -984,17 +991,24 @@ p {
   }
 }
 @media (min-width:1320px) {
+  .main_card {
+    width: 99%;
+    height: 470px !important;
+}
+  .news_card:hover .news_card_img {
+    opacity: 1;
+    top: -45%;
+    left: -13%;
+    transform: rotateZ(-13deg);
+  }
   .font_16 {
     font-size: 16px !important;
-}
-  .img_cherry {
-    right: 47% !important;
 }
   .text_margin_bottom {
     margin-bottom: 250px;
 }
   .img_wdth_section_real {
-    width: 660px;
+    max-width: 660px;
     height: 946px;
 }
 .img_bussiness {
@@ -1045,8 +1059,15 @@ p {
 }
 }
 @media (min-width:1368px) {
+  .news_header_logo{
+    width: 180px;
+    height: 180px;
+  }
+  .margin_col {
+    padding-top: 96px;
+}
   .margin_icon {
-    margin-bottom: 193px;
+    margin-bottom: 195.5px;
 }
   .img_milad {
     height: 1012px;
@@ -1084,13 +1105,7 @@ p {
     top: -19.7%;
     height: 1012px;
 }
-.img_cherry {
-  width: 597px;
-  right: 51% !important;
-}
-}
-@media (min-width:1540px) {
-.img_cherry {
-  width: 32%;
+.margin_icon {
+  margin-bottom: 193px;
 }
 }
