--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -243,7 +243,7 @@ input[type=number]::-webkit-outer-spin-button {
 @media (max-width: 991px) {
   .mobile_view {
     position: fixed;
-    background-color: rgb(220, 100, 80);
+    background-color:black;
     backdrop-filter: blur(50px);
     height: 100vh;
     width: 100%;
@@ -294,7 +294,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .cross span:nth-child(2) {
-  transform: translate(-34% , -137%) rotate(-47deg);
+  transform: translate(-33% , -137%) rotate(-47deg);
   opacity: 1;
   transition: 30ms linear;
 }
@@ -509,8 +509,6 @@ textarea{
 .fs_16 {
   font-size: 11px !important;
 }
-
-
 @media (min-width: 576px) {
   .adovcate_text {
     line-height: 110% ;
