--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -112,7 +112,6 @@
 }
 
 /**************** Section Business **********************/ 
-
 .hr_business{
     height: 2px;
     width: 100%;
@@ -162,20 +161,18 @@
   transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
-
 .news-slider .slide-content:hover {
   transform: scale(0.95);
 }
-
 
 /**************** Milad **********************/ 
 .img_comma {
   transform: translate(0% , -11%);
 }
-.col_border_top{
+.col_milad_border_top{
   border-top-left-radius: 70px;
 }
-.section_margin_left{
+.section_milad_margin_left{
   margin-left: 12px;
 }
 .button_bio {
@@ -278,7 +275,7 @@ p {
 .section_margin_top{
   margin-top: -2px !important;
 }
-.section_margin_bottom{
+.section_mb_minus{
   padding-bottom: -2%;
 }
 .bttn_slide{
@@ -291,10 +288,10 @@ p {
 .bttn_svg:hover path{
   opacity: 0.6 !important;
 }
-.height_section{
-  min-height: 1150px;
+.section_cherry_height{
+  min-height: 1145px;
 }
-.margin_col{
+.margin_cherry_sect_col{
   padding-top: 48px;
 }
 
@@ -446,14 +443,11 @@ p {
   color: #fe6a5b;
   transition: all 300ms linear;
 }
-.text_margin_bottom{
-  margin-bottom: 200px;
-}
 .img_comma {
   width: 103px;
   height:80px;
 }
-.text_margin_bottom {
+.litigation_text_mb {
   margin-bottom: 0px;
 }
 .padding_top_150 {
@@ -484,6 +478,9 @@ p {
   height: 48px;
 }
 @media (min-width:576px) {
+  .section_cherry_height {
+    min-height: 817px;
+}
   .news_heading {
     font-size: 18px;
 }
@@ -564,6 +561,9 @@ p {
 }
 }
 @media (min-width:768px) {
+  .section_cherry_height {
+    min-height: 850px;
+}
   .content_height {
     height: 470px !important;
   } 
@@ -597,10 +597,10 @@ p {
   .slide-content{
     width: 346px;
   }
-  .margin_col {
+  .margin_cherry_sect_col {
     padding-top: 96px;
 }
-  .section_margin_left {
+  .section_milad_margin_left {
     margin-left: 48px;
 }
   .img_header{
@@ -676,7 +676,7 @@ p {
         opacity: 0.15;
         background-color: white;
     }
-    .text_margin_bottom {
+    .litigation_text_mb {
       margin-bottom: 80px;
   }
     .padding_top_150{
@@ -743,7 +743,7 @@ p {
   .padding_top_200{
     margin-top: 150px;
 }
-  .margin_col{
+  .margin_cherry_sect_col{
     padding-top: 120px;
   }
   .img_bussiness {
@@ -751,10 +751,10 @@ p {
     height: 674px;
     transform: translateX(2%);
 }
-  .col_border_top {
+  .col_milad_border_top {
     border-top-left-radius: 110px;
 }
-  .section_margin_left{
+  .section_milad_margin_left{
     margin-left: 60px;
   }
   .margin_icon{
@@ -810,6 +810,9 @@ p {
     }
 }
 @media (min-width:1024px) {
+  .section_cherry_height {
+    min-height: 739px;
+}
   .news_header_logo{
     width: 115px;
     height: 115px;
@@ -838,7 +841,7 @@ p {
     height: 1041px;
     object-fit: contain;
 }
-  .text_margin_bottom {
+  .litigation_text_mb {
     margin-bottom: 300px;
 }
   .padding_top_200 {
@@ -866,8 +869,9 @@ p {
 .img_construction {
   width: 512px;
   height: 706px;
+  transform: translateY(4.7%) !important;
 }
-  .col_border_top{
+  .col_milad_border_top{
     border-top-left-radius: 150px;
   }
     .padding_top_150{
@@ -927,7 +931,7 @@ p {
     margin-top: 40px;
     margin-bottom: 196px;
   }
-  .col_border_top{
+  .col_milad_border_top{
     border-top-left-radius: 231px;
   } 
   .icon_back{
@@ -974,7 +978,7 @@ p {
     .padding_top_150{
         padding-top: 90px;
     }
-.section_margin_left {
+.section_milad_margin_left {
   margin-left: 150px;
 }
     :root{
@@ -1004,7 +1008,7 @@ p {
   .font_16 {
     font-size: 16px !important;
 }
-  .text_margin_bottom {
+  .litigation_text_mb {
     margin-bottom: 250px;
 }
   .img_wdth_section_real {
@@ -1053,8 +1057,7 @@ p {
       --fs_xsm:16px;
       --fs_xxsm:13px;
   }
-  
-  .section_margin_left {
+  .section_milad_margin_left {
     margin-left: 200px;
 }
 }
@@ -1063,7 +1066,7 @@ p {
     width: 180px;
     height: 180px;
   }
-  .margin_col {
+  .margin_cherry_sect_col {
     padding-top: 96px;
 }
   .margin_icon {
@@ -1083,6 +1086,9 @@ p {
 }
 }
 @media (min-width:1440px) {
+  .section_cherry_height {
+    min-height: 797px;
+}
   .text_news {
     font-size: 144px;
 }
